--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- start header -->
     <header id="heading">
         <section class="container log-nav-sign">
-            <a id="logo" href="C:\Users\Hatem\Desktop\Big 5\index.html"><img src="images/logo.svg" alt="logo"></a>
+            <a id="logo" href="index.html"><img src="images/logo.svg" alt="logo"></a>
             <img id="list-icon" src="images/icon-hamburger.svg" alt="">
             <nav id="mobile-nav">
                 <ul class="ul-parent">
@@ -60,7 +60,6 @@
         </section>
     </header>
 <!-- end header -->
-    <!-- --------------- -->
     <!-- start about content  -->
     <section id="sec-1">
         <div class="container">
